# ImageThread

./: .gitignore  CMakeLists.txt  README.md  compile.sh
app/include/: effects.h  stack_image.h
app/src/: CMakeLists.txt  effects.c  main.c  stack_image.c
lib/bitmap/: CMakeLists.txt  bitmap.c
